- HealthRecordService 수정:   - ProductRecommendationDTO의 price와 score에서 null 체크 로직 수정   - convertToJsonMap 메서드에서 id, price, score의 null 처리 개선   - escapeJsonString 메서드 추가로 JSON 문자열 이스케이프 처리
- RecommendationService 개선:
  - getHealthHistory 메서드에서 RecommendedIngredient 추가 가능성 고려
  - ProductRecommendationDTO 생성 시 null 및 기본값 처리 로직 유지

- 전체 코드 가독성 및 안정성 향상:
  - 로그 메시지 구조화 및 디버깅 정보 추가
  - 예외 처리 강화로 오류 발생 시 원인 파악 용이